<resources>
    <string name="app_name">MireaProject</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Муравьев Владислав Романович</string>
    <string name="nav_header_subtitle">Номер по списку: 21</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_browser">Browser</string>
    <string name="menu_home">Home</string>
    <string name="menu_data">Data</string>
    <string name="menu_video">Video</string>
    <string name="menu_steps">Steps</string>
    <string name="menu_contacts">Add contact</string>
    <string name="menu_noise">Noise level</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_converter">JPG to PNG Converter</string>
    <string name="menu_courses">Courses</string>
    <string name="menu_maps">Maps</string>
    <string name="menu_apps">Apps</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate
with Firebase.</string>
    <string name="hint_user_id">User ID</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="firebase_status_fmt">Firebase UID: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>
    <string name="android_id_text">Android ID: %s</string>
    <string name="error_sign_in_failed">Sign in failed, see logs for details.</string>

    <string name="unknown_error_message">WTF is going on?</string>
    <string name="remote_error_message">Maps server cannot be reached</string>
    <string name="network_error_message">Network troubles</string>

    <string name="hello_fragment_home">Welcome to the club, buddy!</string>

    <string name="google_description">Google - это мировой лидер в области поиска в Интернете и онлайн-рекламы, а также одна из самых известных компаний в мире информационных технологий. Компания была основана в 1998 году Ларри Пейджем и Сергеем Брином в гараже в Калифорнии, США. Они начали работать над своим проектом, который получил название Google, в рамках своей диссертации в Стэнфордском университете.\n\n
Google был создан как поисковая система, которая предлагала пользователям более точные результаты поиска, чем другие поисковые системы того времени. С помощью новой технологии, которую они разработали, называемой PageRank, Google мог предоставлять более релевантные результаты поиска для пользователей.\n\n
С течением времени Google стал более чем просто поисковой системой. Компания разработала множество других продуктов, таких как Gmail, Google Maps, YouTube, Google Drive и многие другие. Google также занял лидирующие позиции в области онлайн-рекламы, предоставляя рекламодателям возможность достигать своей целевой аудитории на миллионах сайтов в Интернете.\n\n
Сегодня Google является одной из самых крупных и успешных компаний в мире информационных технологий. Компания имеет огромное количество пользователей по всему миру и продолжает разрабатывать новые продукты и технологии, которые меняют нашу жизнь и способ общения в Интернете.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>