<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_browser"
            android:icon="@mipmap/ic_browser_foreground"
            android:title="@string/menu_browser" />
        <item
            android:id="@+id/nav_data"
            android:icon="@mipmap/ic_picture_foreground"
            android:title="@string/menu_data" />
        <item
            android:id="@+id/nav_video"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_video" />
        <item
            android:id="@+id/nav_sensors"
            android:icon="@drawable/steps"
            android:title="@string/menu_steps" />
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/contact"
            android:title="@string/menu_contacts" />
    </group>
</menu>