<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:orientation="vertical"
    android:weightSum="4">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:scaleType="fitStart"
            android:src="@drawable/firebase"
            tools:srcCompat="@drawable/firebase"
            android:contentDescription="firebase logo" />

        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/emailpassword_title_text"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signed_out"
            android:textAlignment="center"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/black"
            tools:text="Firebase UID: " />

    </LinearLayout>


    <RelativeLayout
        android:id="@+id/rel"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/cardview_dark_background"
        android:gravity="center">

        <LinearLayout
            android:id="@+id/email_password_fields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            tools:visibility="gone">

            <EditText
                android:id="@+id/field_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_weight="1"
                android:autofillHints=""
                android:hint="Email"
                android:inputType="textEmailAddress"
                android:textColorHint="#BCAAA4"
                tools:ignore="TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/field_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="8dp"
                android:layout_weight="1"
                android:hint="Password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:textColorHint="#BCAAA4" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/email_password_buttons"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email_password_fields"
            android:layout_marginVertical="8dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            tools:visibility="gone">

            <Button
                android:id="@+id/email_sign_in_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_weight="1"
                android:background="@drawable/round_button"
                android:text="@string/sign_in"
                android:textSize="14sp" />

            <Button
                android:id="@+id/email_create_account_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_weight="1"
                android:background="@drawable/round_button"
                android:text="@string/create_account"
                android:textSize="14sp" />

        </LinearLayout>

        <Button
            android:id="@+id/verButton"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="30dp"
            android:background="@drawable/round_button"
            android:text="Verify"
            android:visibility="visible"
            tools:visibility="visible" />

        <Button
            android:id="@+id/sign_out_button"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="30dp"
            android:background="@drawable/round_button"
            android:text="@string/sign_out"
            android:visibility="visible"
            tools:visibility="visible" />

        <Button
            android:id="@+id/go_to_app_button"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/verButton"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/round_button"
            android:text="Go to app"
            android:visibility="visible"
            tools:visibility="visible" />


    </RelativeLayout>

</LinearLayout>